# plutonium-source-code

./: README.md
module/src/main/cpp/: CMakeLists.txt  main.cpp  utils.cpp
module/src/main/cpp/imgui/: imgui.cpp  imgui.h  imgui_draw.cpp  imgui_internal.h  imgui_widgets.cpp
module/src/main/cpp/imgui/backends/: imgui_impl_android.cpp  imgui_impl_opengl3.cpp
module/src/main/cpp/imgui/examples/example_android_opengl3/android/: build.gradle  settings.gradle
module/src/main/cpp/imgui/examples/example_android_opengl3/android/app/: build.gradle
module/src/main/cpp/includes/: addr.h  log.h  plutonium.h  shellcode.h  shellcode_exec.h  utils.h
module/src/main/cpp/plutonium/: bypass.h  plutonium.cpp
module/src/main/cpp/plutonium/data/: FontESP.h  SFPro.h  offsets.h
module/src/main/cpp/plutonium/engine/: chams.h  engine.h  engine_players.h  skinchanger.cpp  skinchanger.h  world_to_screen.h
module/src/main/cpp/plutonium/engine/bots/: aimbot.h
module/src/main/cpp/plutonium/engine/chams/: shader.h
module/src/main/cpp/plutonium/engine/exploits/: exploits.h  occlusion.h
module/src/main/cpp/plutonium/gui/: esp.h  gui.h  menu.h  shadow.h  skinchanger.h  touches.h
module/src/main/cpp/plutonium/gui/menu/: internal.hpp  log.hpp  notifications.hpp  ui.cpp  ui.hpp  util.cpp  util.hpp  vars.h  widgets.cpp  widgets.hpp
module/src/main/cpp/plutonium/hooks/: plthook.h
module/src/main/cpp/plutonium/il2cpp/: il2cpp_api.h  il2cpp_structs.h
module/src/main/cpp/plutonium/sdk/: sdk.h
module/src/main/cpp/plutonium/sdk/axlebolt/: bolt.h  controls.h  occlusion.h  photon.h  player.h  safe_values.h  snapshot.h  weapon.h
module/src/main/cpp/plutonium/sdk/unity/: basic.h
module/src/main/cpp/plutonium/unity/: Matrix3x3.hpp  Matrix4x4.hpp  Quaternion.hpp  Ray.hpp  RaycastHit.hpp  Rect.hpp  UnityStructures.h  Vector2.hpp  Vector3.hpp  Vector4.hpp
module/src/main/cpp/xdl/: xdl.c  xdl_iterate.c  xdl_linker.c  xdl_lzma.c
